AM_CFLAGS =
AM_CPPFLAGS = -Wall -Werror
ACLOCAL_AMFLAGS = -I m4
hardware_platform = i686-linux-gnu
noinst_LTLIBRARIES = libdebug_api_.la
libdebug_api__ladir = $(top_builddir)/source/debug_api/.libs
libdebug_api__la_CPPFLAGS = -I$(top_builddir)/source/debug_api/./include $(CPPFLAGS)
libdebug_api__la_SOURCES = ansc_protection.c ansc_debug.c ansc_memory.c user_string.c
libdebug_api__la_LDFLAGS = 
