SUBDIRS = AnscAtomTable AnscBrokerEngineTcp AnscBrokerServerTcp AnscBrokerSocketTcp AnscComponentObject AnscCoVer3 AnscCrypto AnscCryptoPub AnscCryptoPubSSLeay AnscDaemonEngineTcp AnscDaemonEngineUdp AnscDaemonServerTcp AnscDaemonServerUdp AnscDaemonSocketTcp AnscDaemonSocketUdp AnscLightComponent AnscLpcConnector AnscLpccoTcp AnscModuleContainer AnscObjectContainer AnscObjectMapper AnscPlatform AnscQueryInterface AnscSimpleClientTcp AnscSimpleClientUdp AnscSimpleSystemTime AnscString AnscStringUtil AnscTimerScheduler AnscUtilBox AnscXmlDomParser AnscXsocket
