SUBDIRS = AnscPlatform AnscSimpleClientTcp AnscSimpleSystemTime AnscDaemonEngineTcp AnscLpcConnector AnscXsocket AnscDaemonSocketUdp AnscString AnscTimerScheduler AnscDaemonServerTcp AnscDaemonEngineUdp AnscBrokerSocketTcp AnscCryptoPub AnscAtomTable AnscStringUtil AnscSimpleClientUdp AnscComponentObject AnscCryptoPubSSLeay AnscCrypto AnscObjectContainer AnscCoVer3 AnscDaemonServerUdp AnscLightComponent AnscDaemonSocketTcp AnscQueryInterface AnscXmlDomParser AnscBrokerEngineTcp AnscObjectMapper AnscModuleContainer AnscBrokerServerTcp AnscUtilBox AnscLpccoTcp
