SUBDIRS = AnscLightComponent AnscSimpleSystemTime AnscTimerScheduler AnscObjectMapper AnscBrokerEngineTcp AnscSimpleClientTcp AnscCryptoPubSSLeay AnscDaemonServerUdp AnscCoVer3 AnscXmlDomParser AnscXsocket AnscQueryInterface AnscObjectContainer AnscLpcConnector AnscUtilBox AnscModuleContainer AnscDaemonServerTcp AnscCryptoPub AnscBrokerSocketTcp AnscPlatform AnscString AnscDaemonEngineUdp AnscComponentObject AnscDaemonEngineTcp AnscBrokerServerTcp AnscDaemonSocketUdp AnscAtomTable AnscCrypto AnscSimpleClientUdp AnscDaemonSocketTcp AnscStringUtil AnscLpccoTcp
