AM_CFLAGS =
AM_CPPFLAGS = -Wall -Werror
ACLOCAL_AMFLAGS = -I m4
hardware_platform = i686-linux-gnu
noinst_LTLIBRARIES = libutil_api_AnscBrokerEngineTcp.la
libutil_api_AnscBrokerEngineTcp_ladir = $(top_builddir)/source/util_api/.libs
libutil_api_AnscBrokerEngineTcp_la_CPPFLAGS = -I$(top_builddir)/source/util_api/tls/include -I$(top_builddir)/source/util_api/stun/include -I$(top_builddir)/source/util_api/ansc/include -I$(top_builddir)/source/util_api/web/include -I$(top_builddir)/source/util_api/asn.1/include -I$(top_builddir)/source/util_api/http/utilities/include -I$(top_builddir)/source/util_api/http/include $(CPPFLAGS)
libutil_api_AnscBrokerEngineTcp_la_SOURCES = ansc_beto_states.c ansc_beto_process.c ansc_beto_management.c ansc_beto_base.c ansc_beto_recv.c ansc_beto_interface.c ansc_beto_operation.c ansc_beto_send.c
libutil_api_AnscBrokerEngineTcp_la_LDFLAGS = 
