AM_CFLAGS =
AM_CPPFLAGS = -Wall -Werror
ACLOCAL_AMFLAGS = -I m4
hardware_platform = i686-linux-gnu
noinst_LTLIBRARIES = libutil_api_AnscBrokerServerTcp.la
libutil_api_AnscBrokerServerTcp_ladir = $(top_builddir)/source/util_api/.libs
libutil_api_AnscBrokerServerTcp_la_CPPFLAGS = -I$(top_builddir)/source/util_api/tls/include -I$(top_builddir)/source/util_api/stun/include -I$(top_builddir)/source/util_api/ansc/include -I$(top_builddir)/source/util_api/web/include -I$(top_builddir)/source/util_api/asn.1/include -I$(top_builddir)/source/util_api/http/utilities/include -I$(top_builddir)/source/util_api/http/include $(CPPFLAGS)
libutil_api_AnscBrokerServerTcp_la_SOURCES = ansc_bsto_worker.c ansc_bsto_states.c ansc_bsto_operation.c ansc_bsto_interface.c ansc_bsto_accept.c ansc_bsto_base.c ansc_bsto_process.c ansc_bsto_management.c
libutil_api_AnscBrokerServerTcp_la_LDFLAGS = 
