AM_CFLAGS = 

AM_CPPFLAGS = -Wall -Werror

ACLOCAL_AMFLAGS = -I m4

hardware_platform = i686-linux-gnu

lib_LTLIBRARIES = lib_utilapi_anscbrokersockettcp.la
#bin_PROGRAMS =

lib_utilapi_anscbrokersockettcp_ladir = $(top_builddir)/source/.libs

lib_utilapi_anscbrokersockettcp_la_CPPFLAGS = -I$(top_builddir)/source/util_api/include $(CPPFLAGS)

lib_utilapi_anscbrokersockettcp_la_SOURCES = \
    ansc_bkto_base.c \
    ansc_bkto_interface.c \
    ansc_bkto_operation.c \
    ansc_bkto_process.c \
    ansc_bkto_states.c \

lib_utilapi_anscbrokersockettcp_la_LDFLAGS =
