AM_CFLAGS = 

AM_CPPFLAGS = -Wall -Werror

ACLOCAL_AMFLAGS = -I m4

hardware_platform = i686-linux-gnu

lib_LTLIBRARIES = lib_utilapi_ansccover3.la
#bin_PROGRAMS =

lib_utilapi_ansccover3_ladir = $(top_builddir)/source/.libs

lib_utilapi_ansccover3_la_CPPFLAGS = -I$(top_builddir)/source/util_api/include $(CPPFLAGS)

lib_utilapi_ansccover3_la_SOURCES = \
    ansc_cover3_base.c \
    ansc_cover3_engine.c \

lib_utilapi_ansccover3_la_LDFLAGS =
